--- a/config/cable.yml
+++ b/config/cable.yml
@@ -4,4 +4,6 @@ development:
 test:
   adapter: test
 
-produ
+production:
+  adapter: redis
+  url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1"
