Pontoon: Update Malay (ms) localization of Test Pilot Website

--- a/config/storage.yml
+++ b/config/storage.yml
@@ -26,3 +26,10 @@ local:
 # microsoft:
 #   service: AzureStorage
 #   storage_account_name: your_account_name
+#   storage_access_key: <%= Rails.application.credentials.dig(:azure_storage, :storage_access_key) %>
+#   container: your_container_name-<%= Rails.env %>
+
+# mirror:
+#   service: Mirror
+#   primary: local
+#   mirrors: [ amazon, google, microsoft ]
